examples/test/testpolicy18299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18299
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key45: value0
      key39: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value26
      podSelector:
        matchLabels:
          key28: value16
          key21: value13
          key36: value38
